tests/baselines/reference/genericCallWithGenericSignatureArguments3(strict=true).errors.txt
genericCallWithGenericSignatureArguments3.ts(6,12): error TS2454: Variable 'r' is used before being assigned.
genericCallWithGenericSignatureArguments3.ts(9,37): error TS2345: Argument of type '(x: Object) => null' is not assignable to parameter of type '(x: string) => string'.
  Type 'null' is not assignable to type 'string'.
genericCallWithGenericSignatureArguments3.ts(10,38): error TS2322: Type 'null' is not assignable to type 'string'.
genericCallWithGenericSignatureArguments3.ts(12,14): error TS2345: Argument of type 'null' is not assignable to parameter of type 'string'.
genericCallWithGenericSignatureArguments3.ts(13,27): error TS2322: Type 'string' is not assignable to type 'null'.
genericCallWithGenericSignatureArguments3.ts(19,14): error TS2345: Argument of type 'E' is not assignable to parameter of type 'F'.
genericCallWithGenericSignatureArguments3.ts(24,12): error TS2454: Variable 'r' is used before being assigned.
genericCallWithGenericSignatureArguments3.ts(29,16): error TS2345: Argument of type 'null' is not assignable to parameter of type 'string'.
genericCallWithGenericSignatureArguments3.ts(32,16): error TS2345: Argument of type '(a: string) => boolean' is not assignable to parameter of type '(z: string) => string'.
  Type 'boolean' is not assignable to type 'string'.
genericCallWithGenericSignatureArguments3.ts(32,16): error TS2454: Variable 'x' is used before being assigned.
genericCallWithGenericSignatureArguments3.ts(33,16): error TS2454: Variable 'x' is used before being assigned.
genericCallWithGenericSignatureArguments3.ts(33,69): error TS2345: Argument of type '(a2: (z: string) => boolean) => number' is not assignable to parameter of type '(x: (a: string) => boolean) => (n: Object) => 1'.
  Type 'number' is not assignable to type '(n: Object) => 1'.


==== genericCallWithGenericSignatureArguments3.ts (12 errors) ====
    // When a function expression is inferentially typed (section 4.9.3) and a type assigned to a parameter in that expression references type parameters for which inferences are being made, 
    // the corresponding inferred type arguments to become fixed and no further candidate inferences are made for them.
    
    function foo<T>(x: T, a: (x: T) => T, b: (x: T) => T) {
        var r: (x: T) => T;
        return r;
               ~
!!! error TS2454: Variable 'r' is used before being assigned.
    }
    
    var r1 = foo('', (x: string) => '', (x: Object) => null); // any => any
                                        ~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '(x: Object) => null' is not assignable to parameter of type '(x: string) => string'.
!!! error TS2345:   Type 'null' is not assignable to type 'string'.
    var r1ii = foo('', (x) => '', (x) => null); // string => string
                                         ~~~~
!!! error TS2322: Type 'null' is not assignable to type 'string'.
!!! related TS6502 genericCallWithGenericSignatureArguments3.ts:4:42: The expected type comes from the return type of this signature.
    var r2 = foo('', (x: string) => '', (x: Object) => ''); // string => string
    var r3 = foo(null, (x: Object) => '', (x: string) => ''); // Object => Object
                 ~~~~
!!! error TS2345: Argument of type 'null' is not assignable to parameter of type 'string'.
    var r4 = foo(null, (x) => '', (x) => ''); // any => any
                              ~~
!!! error TS2322: Type 'string' is not assignable to type 'null'.
!!! related TS6502 genericCallWithGenericSignatureArguments3.ts:4:26: The expected type comes from the return type of this signature.
    var r5 = foo(new Object(), (x) => '', (x) => ''); // Object => Object
    
    enum E { A }
    enum F { A }
    
    var r6 = foo(E.A, (x: number) => E.A, (x: F) => F.A); // number => number 
                 ~~~
!!! error TS2345: Argument of type 'E' is not assignable to parameter of type 'F'.
    
    
    function foo2<T, U>(x: T, a: (x: T) => U, b: (x: T) => U) {
        var r: (x: T) => U;
        return r;
               ~
!!! error TS2454: Variable 'r' is used before being assigned.
    }
    
    var r8 = foo2('', (x) => '', (x) => null); // string => string
    var r9 = foo2(null, (x) => '', (x) => ''); // any => any
    var r10 = foo2(null, (x: Object) => '', (x: string) => ''); // Object => Object
                   ~~~~
!!! error TS2345: Argument of type 'null' is not assignable to parameter of type 'string'.
    
    var x: (a: string) => boolean;
    var r11 = foo2(x, (a1: (y: string) => string) => (n: Object) => 1, (a2: (z: string) => string) => 2); // error
                   ~
!!! error TS2345: Argument of type '(a: string) => boolean' is not assignable to parameter of type '(z: string) => string'.
!!! error TS2345:   Type 'boolean' is not assignable to type 'string'.
                   ~
!!! error TS2454: Variable 'x' is used before being assigned.
    var r12 = foo2(x, (a1: (y: string) => boolean) => (n: Object) => 1, (a2: (z: string) => boolean) => 2); // error
                   ~
!!! error TS2454: Variable 'x' is used before being assigned.
                                                                        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '(a2: (z: string) => boolean) => number' is not assignable to parameter of type '(x: (a: string) => boolean) => (n: Object) => 1'.
!!! error TS2345:   Type 'number' is not assignable to type '(n: Object) => 1'.